# golden-abundance-lite

./: .git-blame-ignore-revs  .gitignore  README.md  app.jsx  index.html  justfile  landing.jsx
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_cap_userrow_optional_string_fields.py  0003_reward_unique_user_task.py  0004_join_request_pending_unique.py  0005_check_constraints.py  0006_timestamp_server_defaults.py  0007_fk_ondelete_cascade.py  0008_drop_team_counter_cols.py  0009_task_color_format_check.py  0010_task_progress_completed_index.py  7afb2471867b_cap_userrow_optional_string_fields.py  b07d97980abc_reward_unique_user_task.py  c001_join_request_pending_unique.py  c003_timestamp_server_defaults.py
backend/src/backend/: config.py  observability.py  seed.py  seed_reset.py  server.py
backend/src/backend/auth/: __init__.py  dependencies.py  google_stub.py  jwt.py  supabase.py
backend/src/backend/contract/: README.md  __init__.py  auth.py  common.py  endpoints.md  news.py  rank.py  reward.py  task.py  team.py  user.py  validate_examples.py
backend/src/backend/contract/examples/: auth_google_request.json  auth_google_response.json  me_profile_create_response.json  me_teams_response.json  rank_teams_week.json  rank_users_week.json  task_submission_response.json  task_submission_response_no_reward.json  team_as_leader.json  team_as_member.json
backend/src/backend/db/: __init__.py  engine.py  models.py  session.py
backend/src/backend/routers/: __init__.py  auth.py  health.py  me.py  news.py  tasks.py  teams.py
backend/src/backend/scripts/: dump_demo_accounts.py  upgrade_deps.py
backend/src/backend/services/: __init__.py  display_id.py  leaderboard.py  news.py  pagination.py  rank.py  reward.py  task.py  team.py  team_join.py  user.py
backend/tests/: conftest.py  helpers.py  test_auth.py  test_config.py  test_cors.py  test_display_id.py  test_health.py  test_jwt.py  test_me.py  test_me_profile.py  test_news.py  test_observability.py  test_pagination.py  test_rewards_read.py  test_schema.py  test_seed.py  test_seed_demo.py  test_seed_display_id_drift.py  test_sentry_init.py  test_task_service.py  test_task_submit.py  test_tasks_read.py  test_team_approve_reject.py  test_team_join_endpoints.py  test_team_join_service.py  test_team_leave.py  test_team_service.py  test_teams_read.py  test_teams_update.py  test_user_service.py
backend/tests/auth/: test_google_stub.py  test_jwt.py  test_supabase.py  test_supabase_claims.py
backend/tests/db/: test_constraints.py  test_db_roundtrip.py  test_schema.py
backend/tests/routers/: test_auth.py  test_auth_required.py  test_health.py  test_leaderboard.py  test_me.py  test_me_profile.py  test_me_teams.py  test_news.py  test_rank.py  test_tasks_submit.py  test_team_auth.py  test_teams_approve_reject.py  test_teams_update.py
backend/tests/services/: test_display_id.py  test_pagination.py  test_reward_service.py  test_task_service.py  test_team_join_service.py  test_team_service.py  test_user_service.py
claude-design-handoff/: README.md
claude-design-handoff/project/: Landing Page.html  ios-frame.jsx  landing.jsx
docs/: phase-7-launch-runbook.md  production-launch-plan.md
docs/claude-design/: justfile
docs/functional-requirements/: 01-seed-data.md  03-api-contract.md  04-frontend-derivations.md  05-roles-permissions.md  06-entity-rules.md  07-user-journeys.md  08-error-semantics.md  10-deferred-scope.md  README.md
docs/superpowers/plans/: 2026-04-19-api-contract.md  2026-04-19-phase-1-vite-ts-split.md  2026-04-19-phase-2-api-contract.md  2026-04-19-phase-5a-foundation.md  2026-04-19-phase-5b-auth.md  2026-04-19-phase-5c-teams.md  2026-04-19-phase-5d-content.md  2026-04-19-phase-5e-polish.md  2026-04-20-phase-3-routing.md  2026-04-20-phase-4a-plumbing.md  2026-04-20-phase-4b-auth-read.md  2026-04-20-phase-4c-write-cleanup.md  2026-04-21-phase-6a-backend-auth.md  2026-04-21-phase-6b-frontend-auth.md  2026-04-21-phase-7a-deploy-foundation.md  2026-04-21-phase-7b-observability-launch.md  2026-04-21-rename-rank-to-leaderboard.md  2026-04-22-backend-review-fixes.md
docs/superpowers/specs/: 2026-04-19-api-contract-design.md  2026-04-20-phase-3-routing-design.md  2026-04-20-phase-4-frontend-wiring-design.md
frontend/: .env.example  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  justfile  openapi.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/src/: App.jsx  App.tsx  data.ts  main.tsx  queryClient.ts  router.ts  types.ts  utils.ts
frontend/src/api/: client.ts  errors.ts  index.ts  leaderboard.ts  me.ts  rank.ts  tasks.ts  teams.ts
frontend/src/auth/: session.tsx  token.ts
frontend/src/dev/: demo-accounts.json
frontend/src/hooks/: useMe.ts  useMyRewards.ts  useMyTasks.ts  useMyTeams.ts
frontend/src/lib/: regions.ts  returnTo.ts  supabase.ts
frontend/src/mutations/: me.ts  tasks.ts  teams.ts
frontend/src/queries/: keys.ts  leaderboard.ts  me.ts  tasks.ts  teams.ts
frontend/src/routes/: __root.tsx  _authed.home.tsx  _authed.leaderboard.tsx  _authed.me.profile.edit.tsx  _authed.me.profile.tsx  _authed.me.tsx  _authed.rewards.tsx  _authed.tasks.$taskId.start.tsx  _authed.tasks.$taskId.tsx  _authed.tasks.tsx  _authed.tsx  auth.callback.tsx  debug.sentry-smoke.tsx  index.tsx  sign-in.tsx  welcome.tsx
frontend/src/screens/: GoogleAuthScreen.tsx  HomeScreen.tsx  InterestForm.tsx  LandingScreen.tsx  LeaderboardScreen.tsx  MyRewards.tsx  MyScreen.tsx  ProfileScreen.tsx  ProfileSetupForm.tsx  RankScreen.tsx  RenameTeamSheet.tsx  RewardsScreen.tsx  ShareSheet.tsx  TaskCard.tsx  TaskDetailScreen.tsx  TasksScreen.tsx  TeamCard.tsx  TeamForm.tsx  TicketForm.tsx
frontend/src/state/: AppStateContext.tsx
frontend/src/test/: queryClient.ts  renderRoute.tsx  setup.ts  supabase-mock.ts
frontend/src/ui/: BottomNav.tsx  (+22 more)
(+15 files in other folders)
