[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend server for Golden Abundance"
authors = [{ name = "Jet Kan", email = "jetkan.yk@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.18.4",
  "fastapi[standard]>=0.136.0",
  "greenlet>=3.4.0",
  "psycopg[binary]>=3.3.3",
  "pyjwt>=2.12.1",
  "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.11",
  "testcontainers>=4.14.2",
  "ty>=0.0.31",
]

[tool.uv]
required-version = ">=0.11.7"

[tool.fastapi]
entrypoint = "backend.server:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--cov"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 90
show_missing = true

# SQLAlchemy's InstrumentedAttribute descriptors (`Row.col == value`,
# `.is_()`, `.in_()`, `.asc()`, `.desc()`, `.ilike()`) and SQLModel's
# dynamically-synthesized `__init__` don't survive ty's type resolution,
# producing false positives throughout query code. These rules never
# catch real bugs in this codebase because nearly every module touches
# SQLAlchemy — scope the override to src/ and tests/ only.
[[tool.ty.overrides]]
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
missing-argument = "ignore"
no-matching-overload = "ignore"
unresolved-attribute = "ignore"
unsupported-operator = "ignore"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "N"]
# B008: FastAPI's `= Depends(...)` / `= Query(...)` defaults are idiomatic,
#       not the anti-pattern this rule targets.
# RUF001/002/003: ambiguous-unicode noise from zh-Hant strings in seed data.
ignore = ["B008", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally use local imports (to scope heavy fixtures) and assert.
"tests/**" = ["PLC0415"]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
